==============================================================================
	Major features, additions and changes between Dialyzer versions
		(in reversed chronological order)
==============================================================================

Version 2.x.x (in Erlang/OTP R14B01)
------------------------------------
 - Fixed problems in the handling of remote types in records used as types
   (thanks to Nico Kruber for the report and to Maria Christakis for the fix).
 - Fixed handling of nested opaque types (thanks to Thorsten Schuett for
   reporting it and to Maria Christakis for fixing it).

Version 2.3.1 (in Erlang/OTP R14B)
----------------------------------
 - Eliminated warnings for auto-imported BIF clashes.

Version 2.3.0 (in Erlang/OTP R14A)
----------------------------------
 - Dialyzer properly supports the new attribute -export_type and checks
   that remote types only refer to exported types. A warning is produced
   if some files/applications refer to types defined in modules which are
   neither in the PLT nor in the analyzed applications.
 - Support for detecting data races involving whereis/1 and unregister/1.
 - More precise identification of the reason(s) why a record construction
   violates the types declared for its fields.
 - Fixed bug in the handling of the 'or' guard.
 - Better handling of the erlang:element/2 BIF.
 - Complete handling of Erlang BIFs.

Version 2.2.0 (in Erlang/OTP R13B04)
------------------------------------
 - Much better support for opaque types (thanks to Manouk Manoukian).
 - Added support for recursive types (experimental).
 - Added support for parameterized modules.
 - Dialyzer now warns when -specs state that a function returns some type
   when in fact it does not.
 - Added --no_native (-nn) option so that the user can bypass the native code
   compilation that dialyzer heuristically performs when dialyzing many files.
 - Fixed minor bug in the dialyzer script allowing the --wx option to bring